	This is used to override the default style set for an evas object.
	For example, this can be used to nicely change the font and size
	in a text editor.

2012-02-23  Carsten Haitzler (The Rasterman)

        * Fix rouding of update regions for image objects when scaled
        (leaves trails without this).

2012-02-23  Cedric Bail

	* Remove Software SDL engine.

2012-02-23  Carsten Haitzler (The Rasterman)

        * Add evas_object_ref_get() to be able to tell if others ref
        an object.

2012-04-03  Gustavo Sverzut Barbieri (k-s)

	* Box layouts: fix handling of weights that have decimal parts,
	they were being handled as "int" where "double" was expected.

2012-04-12  Carsten Haitzler (The Rasterman)

        * Fix gl engine clipping bug when rendering to evas map fbo's
        when gl window buffer is smaller than the fbo. used wrong
        surface size in clipping logic.

2012-04-12  Tom Hacohen (TAsn)

	* Textblock: Fixed compilation with liblinebreak disabled.

2012-04-14  Carsten Haitzler (The Rasterman)

        * Fix color multiplier staying set when rendering map.

2012-04-22  Carsten Haitzler (The Rasterman)

        * Fix shader binary saving to save with dir existing already.

2012-04-26  Carsten Haitzler (The Rasterman)

        1.2.0 release

2012-04-26  Cedric Bail

	* Lock less font rendering.
	* Removing EVAS_FRAME_QUEUING, EVAS_SLI, METRIC_CACHE and WORD_CACHE.

2012-04-29  Tom Hacohen (TAsn)

	* Textblock: Fixed a couple of bugs with range delete.

2012-04-30  Jérôme Pinot

	* Add missing files in the tarballs.

2012-05-01  Cedric Bail

	* Compute limited bounding box for Smart object.
	* Use bounding box to reduce the number of object explored during event propagation.

2012-05-03  Iván Briano (Sachiel)

	* Add CServe2 and image cache2 that makes use of it. Several changes
	in the buffer and software engines to use the right cache if CServe2
	is requested for the application.